--- a/index.html
+++ b/index.html
@@ -4,20 +4,30 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Weather App</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
+  crossorigin="anonymous">
+  <title>Weather_App</title>
   <style type="text/css">
-    body{
-    
-        background-color: greenyellow;
-    }
+      .card
+      {
+        height: 150px;
+      }
     </style>
 </head>
 <body align="center">
-  <h1>Weather Details</h1>
-  <form action="/" method="POST">
-    <label for="cityInput"><b>City Name: </b></label>
-    <input type="text" id="cityInput" placeholder="Enter the City Name" name="cityName" required><br><br>
-    <button type="submit">Go</button>
-  </form>
+  <div class="container" style="width: 400px; margin-top: 80px;">
+    <div class="row">
+      <div class="col s12">
+        <div class="card text-white bg-warning">
+          <h3 style="margin-top: 10px; color: #000;">Weather Details</h3>
+          <form action="/" method="POST">
+            <label for="cityInput"><b>City Name: </b></label>
+            <input type="text" id="cityInput" placeholder="Enter the City Name" name="cityName" required><br><br>
+            <button type="submit" class="btn btn-primary btn-sm" style="width: 100px;" style="margin-bottom: 30px;"><b>Find</b></button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
